# superlists

./: .gitignore  functional_test.py  pyproject.toml
lists/templates/: home.html
superlists/: settings.py  urls.py
