[tool.poetry]
name = "superlists"
version = "0.1.0"
description = ""
authors = ["Michael Simpson <mjs2600@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
selenium = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
